syntax = "proto3";

package cz.datadriven.beam.transaction.proto;

import "server.proto";

message Internal {

  message KeyValue {
    string key = 1;
    double value = 2;
    int64 ts = 3;
  }

  string transactionId = 1;
  repeated KeyValue keyValue = 2;
  Request request = 3;
  
  // status, if already assigned
  uint32 status = 4;

}
